--- a/barcelona.html
+++ b/barcelona.html
@@ -17,6 +17,7 @@
         <div class="intro-placeholder">
             <div class="intro-images">
                 <div class="image-overlay"></div>
+                <img src="img/city/barcelona/intro.jpg" alt="Intro Image" class="intro-image">
             </div>
         </div>     
         <div class="intro-content">
@@ -35,7 +36,7 @@
             <div class="divider"><img src="img/divider-2.svg" alt="Divider"></div>
             <div class="benefit">
                 <span class="number">02</span>
-                <p class="handwritten">Perzonalised to your needs</p>
+                <p class="handwritten">Personalized to your needs</p>
             </div>
             <div class="divider"><img src="img/divider-3.svg" alt="Divider"></div>
             <div class="benefit">
@@ -80,18 +81,18 @@
             <div class="why-images">
                 <div class="image-column">
                     <div class="image-card tall">
-                        <img src="img/image-1.jpg" alt="Beautiful Sagrada Familia">
+                        <img src="img/city/barcelona/image-1.jpg" alt="Beautiful Sagrada Familia">
                     </div>
                     <div class="image-card">
-                        <img src="img/image-3.jpg" alt="Map of metro in Barcelona">
+                        <img src="img/city/barcelona/image-3.jpg" alt="Map of metro in Barcelona">
                     </div>
                 </div>
                 <div class="image-column">
                     <div class="image-card">
-                        <img src="img/image-2.jpg" alt="Park Güell stunning views">
+                        <img src="img/city/barcelona/image-2.jpg" alt="Park Güell stunning views">
                     </div>
                     <div class="image-card tall">
-                        <img src="img/image-4.jpg" alt="A couple in front of Casa Batllo building">
+                        <img src="img/city/barcelona/image-4.jpg" alt="A couple in front of Casa Batllo building">
                     </div>
                 </div>
             </div>
@@ -102,7 +103,7 @@
     <div class="quotation-container">
         <div class="quote-card">
             <div class="quote-avatar">
-                <img src="img/mike-acler-planner.jpg">
+                <img src="img/city/barcelona/mike-acler-planner.jpg">
             </div>
             <div class="quote-content">
                 <p class="quote-text">Hi, I'm Mike 👋 and I help travelers experience authentic Barcelona through personalized itineraries. With years of experience, I've been guiding people through this beautiful city. You'll <strong>discover breath-taking views of Sagrada Familia, wander through Park Güell, and savor authentic tapas in El Born</strong>. I'll ensure you discover the city's hidden gems and iconic landmarks. Tell me your travel style, and let's create your dream trip together!</p>
@@ -118,13 +119,13 @@
     <div class="contents-container">
         <div class="contents-header">
             <h2>What will you get?</h2>
-            <p>There are great benefits with every personalized itinerary from us!</p>
+            <p>For one price, you're getting more than just an itinerary for your trip. We want you to make your trip as smooth as possible.</p>
         </div>
         
         <div class="contents-grid">
             <div class="content-card-2">
                 <div class="card-image-2">
-                    <img src="img/itinerary-01.png" alt="Personalized Itinerary">
+                    <img src="img/city/barcelona/s-itinerary.png" alt="Personalized Itinerary">
                 </div>
                 <div class="card-content">
                     <h3>1. Personalized itinerary</h3>
@@ -134,7 +135,7 @@
 
             <div class="content-card-2">
                 <div class="card-image-2">
-                    <img src="img/map-01.png" alt="Interactive map">
+                    <img src="img/city/barcelona/s-map.png" alt="Interactive map">
                 </div>
                 <div class="card-content">
                     <h3>2. Interactive map</h3>
@@ -144,7 +145,7 @@
 
             <div class="content-card-2">
                 <div class="card-image-2">
-                    <img src="img/live-support-01.png" alt="Live support">
+                    <img src="img/city/barcelona/s-live-support.png" alt="Live support">
                 </div>
                 <div class="card-content">
                     <h3>3. Live support</h3>
@@ -357,17 +358,40 @@
         </div>
     </div>
 </section>
+
+
+<section class="contact">
+    <h2>Do you have further questions?</h2>
+    <p>If you are interested in our services, please contact us via the following contact details. We're also accepting new travel planners to join our team!</p>
+    <div class="contact-boxes">
+      <div class="contact-box">
+        <span class="contact-icon">💬</span>
+        <strong>Chat with us</strong>
+        <a href="tel:+777018287">+420 777 018 287</a>
+      </div>
+      <div class="contact-box">
+        <span class="contact-icon">✉️</span>
+        <strong>Email support</strong>
+        <a href="mailto:ask@superguided.com">ask@superguided.com</a>
+      </div>
+      <div class="contact-box">
+        <span class="contact-icon">🔥</span>
+        <strong>New planners</strong>
+        <a href="mailto:join@superguided.com">join@superguided.com</a>
+      </div>
+    </div>
+</section>
+
  <!-- Footer -->
  <footer>
     <hr class="svg-divider">
     <div class="footer-content">
         <div class="logo">
             <div class="logo-icon">
-                <img src="img/logo-superguided.svg" alt="SuperGuided Logo" class="logo"> 
-                </svg>
+                <a href="index.html"><img src="img/logo-superguided.svg" alt="SuperGuided Logo" class="logo"> </a>
             </div>
             <div class="logo-text">
-                <img src="img/logo-superguided-full.svg" alt="SuperGuided Logo" class="logo"> 
+                <a href="index.html"><img src="img/logo-superguided-full.svg" alt="SuperGuided Logo" class="logo"></a>
             </div>
         </div>
         <p class="footer-text">Get personalized itineraries for beautiful cities in Europe. </p>
@@ -407,6 +431,7 @@
             <a href="zurich.html">Zurich</a></p>
     </div>
 </footer>
+
 <a href="index.html"><img src="img/logo-superguided.svg" class="logo-float" alt="logo" /></a>
 <script src="script.js"></script>
 </div>
