Ready to publish with footer.

--- a/barcelona.html
+++ b/barcelona.html
@@ -128,7 +128,7 @@
                     <img src="img/city/barcelona/s-itinerary.png" alt="Personalized Itinerary">
                 </div>
                 <div class="card-content">
-                    <h3>1. Personalized itinerary</h3>
+                    <h3><span>1</span> Personalized itinerary</h3>
                     <p>A fully tailored plan for mobile or computer designed around your preferences, ensuring you see the sights and enjoy experiences that matter most to you.</p>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     <img src="img/city/barcelona/s-map.png" alt="Interactive map">
                 </div>
                 <div class="card-content">
-                    <h3>2. Interactive map</h3>
+                    <h3><span>2</span> Interactive map</h3>
                     <p>Easy to follow interactive map where you can see everything from your plan: the sights, attractions, viewpoints or restaurants and cafés.</p>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                     <img src="img/city/barcelona/s-live-support.png" alt="Live support">
                 </div>
                 <div class="card-content">
-                    <h3>3. Live support</h3>
+                    <h3><span>3</span> Live support</h3>
                     <p>With our WhatsApp live support you can always travel worry-free: our assistance is always just a message away when you need help.</p>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                     </div>
                     <span class="price">€29,99</span>
                 </div>
-                <button class="btn-primary">
+                <button class="button button--mimas">
                     <span>Get itinerary</span>
 
                 </button>
@@ -186,7 +186,7 @@
                     </div>
                     <span class="price">€39,99</span>
                 </div>
-                <button class="btn-primary">
+                <button class="button button--mimas">
                     <span>Get itinerary</span>
                 </button>
             </div>
@@ -199,7 +199,7 @@
                     </div>
                     <span class="price">€49,99</span>
                 </div>
-                <button class="btn-primary">
+                <button class="button button--mimas">
                     <span>Get itinerary</span>
 
                 </button>
@@ -213,7 +213,7 @@
                     </div>
                     <span class="price">€59,99</span>
                 </div>
-                <button class="btn-primary">
+                <button class="button button--mimas">
                     <span>Get itinerary</span>
                 </button>
             </div>
@@ -225,7 +225,7 @@
                     </div>
                     <span class="price">From €99/day</span>
                 </div>
-                <button class="btn-secondary">
+                <button class="button button--nomas">
                     <span>Hire a tour guide</span>
                 </button>
             </div>
@@ -430,9 +430,12 @@
             <a href="warsaw.html">Warsaw</a>, 
             <a href="zurich.html">Zurich</a></p>
     </div>
+    <div class="empty"></div>
+    <hr class="svg-divider">
 </footer>
+<span class="footer-credits"><span class="text-cover">That's all, that's it! © 2025 SuperGuided.</span><br><span class="message">Be kind 🥰, respect each other 🧡 & travel a lot ✈️🌍</span></span>
 
-<a href="index.html"><img src="img/logo-superguided.svg" class="logo-float" alt="logo" /></a>
+<a href="index.html"><div class="logo-float"><img src="img/logo-superguided.svg" class="logo-float" alt="logo" /></a>
 <script src="script.js"></script>
 </div>
 </body>
