--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@
             <a href="warsaw.html">Warsaw</a>, 
             <a href="zurich.html">Zurich</a></p>
             </div>
+            <div class="empty"></div>
+            <hr class="svg-divider">
         </footer>
+        <span class="footer-credits"><span class="text-cover">That's all, that's it! © 2025 SuperGuided.</span><br><span class="message">Be kind 🥰, respect each other 🧡 & travel a lot ✈️🌍</span></span>
     </div>
     <script src="script.js"></script>
 </body>
