--- a/barcelona.html
+++ b/barcelona.html
@@ -259,7 +259,7 @@
                 <p>Sydney, Australia</p>
             </div>
         </div>
-        <!-- Additional testimonial cards with same structure -->
+        
     </div>
 </section>
 <hr class="svg-divider">
@@ -433,7 +433,7 @@
     <div class="empty"></div>
     <hr class="svg-divider">
 </footer>
-<span class="footer-credits"><span class="text-cover">That's all, that's it! © 2025 SuperGuided.</span><br><span class="message">Be kind 🥰, respect each other 🧡 & travel a lot ✈️🌍</span></span>
+<span class="footer-credits"><span class="text-cover">That's all, that's it! © SuperGuided.</span><br><span class="message">Be kind 🥰, respect each other 🧡 & travel a lot 🌍</span></span>
 
 <a href="index.html"><div class="logo-float"><img src="img/logo-superguided.svg" class="logo-float" alt="logo" /></a>
 <script src="script.js"></script>
