Uprava hlavicky detailu

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
           </section>
         <!-- Testimonials Section-->
         <section class="testimonials hp">
+            <div class="faq-header">
+                <h2>See why people love our itineraries...</h2>
+                <p>In a nutshell: Hassle-free travel planning, great tips, local recommendations and lots of fun!</p>
+            </div>
             <div class="testimonial-cards">
                 <div class="testimonial-card">
                     <div class="quote-mark"><img src="img/quotation-mark-1.svg" alt="Quotation Mark"></div>
