--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="/img/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="/img/favicon/site.webmanifest" />
+    <script src="partners.js"></script>
   </head>
   <body>
     <div id="root"></div>
